--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 
 <body>
-    <div class="container gameContent">
+    <div class="container-fluid contentWrap">
         <header class="container-fluid">
-        <img id="titleImg" src="assets/images/TBLheadertitle2.png" alt="Hangman Title Image" />
+            <div class="imgWrap container">
+        <img id="titleImg" src="assets/images/TBLheadertitle5.png" alt="Hangman Title Image" />
+            </div>
         </header>
+        <div class="container gameContent">
         <div class="row">
 
             <div class="col-md-6 contentCol">
@@ -36,6 +39,13 @@
                 <img id="gameOver" src="assets/images/gameover.png" alt="Game Over Image" />
                 <h2 id="pressKeyTryAgain">Press Any Key to Try Again!</h2>
                 <img id="hangmanImage" src="" alt="" />
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid footer">
+            <div class="container foot">
+                <footer class="text-center mt-3 pt-4">Copyright&copy;</footer>
             </div>
         </div>
     </div>
