--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Word Guess Game!</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/game.js" type="text/javascript"></script>
+    <script src="assets/javascript/game.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <div class="row">
 
             <div class="col-md-6 contentCol"> <!--holds all content in the first/left column-->
-                <h2>Press Any Key to Get Started!</h2>
+                <h2 id="directionsText">Press Any Key to Get Started!</h2>
                 <h4>Wins</h4>
                 <h5 id="winsTotal"></h5><!--will display total wins of all rounds-->
                 <h4>Current Word</h4>
@@ -49,10 +49,10 @@
     </div>
 
 
-    <script>
+    <!-- <script>
         resetGame();
         updateDisplay();
-    </script>
+    </script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
