--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Word Guess Game!</title>
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/javascript/game.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -19,24 +19,34 @@
         </header>
         <div class="container gameContent"> <!--Holds all content of both columns in a container with the class gameContent-->
         <div class="row">
+            <div id="directionsText">Press Any Key to Get Started!</div>
+        </div>
+        
+            <div class="row">
 
-            <div class="col-md-6 contentCol"> <!--holds all content in the first/left column-->
-                <h2 id="directionsText">Press Any Key to Get Started!</h2>
-                <h4>Wins</h4>
-                <h5 id="winsTotal"></h5><!--will display total wins of all rounds-->
-                <h4>Current Word</h4>
-                <h3 id="activeWord"></h3><!--displays the active word in the wordOptions array-->
-                <h4>Guesses Remaining</h4>
-                <h6 id="guessesRemaining"></h6><!--displays # of guesses remaining-->
-                <h4>Letters Already Guessed</h4>
-                <h3 id="lettersGuessed"></h3><!--will display all the letters the user has guessed in current round. Put letters in an array?-->
+            <div class="col-lg-6 contentCol game"> <!--holds all content in the first/left column-->
+                <!-- <div id="directionsText"><h2>Press Any Key to Get Started!</h2></div> -->
+                <div id="progressBar" class="row">
+                    <div id="winsTitle" class="col-xs-6">Wins: 8<span id="winsTotal"></span></div>
+                    <div id="guessesRemainingTitle" class="col">Guesses Remaining: 10<span id="guessesRemaining"></span></div>
+                </div>
+
+
+                <div id="activeWordContain" class="row">
+                <div class="col"><h2 id="guessThePlayer">Guess the player!</h2>
+                <h2 id="activeWord"></h2></div><!--displays the active word in the wordOptions array-->
+                </div>
+                <div id="lettersGuessedContain" class="row">
+                    <div class="col pl-0"><div id="lettersGuessedTitle">Letters Guessed: <span id="lettersGuessed"></span></div>
+                    </div>
+                </div>   
             </div>
 
-            <div class="col-md-6 contentCol"><!--holds all content in the second/right column-->
-                <img id="youWin" src="assets/images/youwin.png" alt="Winning Image" /> <!---brainstorm, bring up a picture of the player when guessed right-->
-                <img id="gameOver" src="assets/images/gameover.png" alt="Game Over Image" /><!---Game over graphic-->
-                <h2 id="pressKeyTryAgain">Press Any Key to Try Again!</h2>
-                <img id="hangmanImage" src="" alt="" /><!---img that changes when the user guesses wrong-->
+            <div class="col-lg-6 contentCol hint"><!--holds all content in the second/right column-->
+                <h2 id="youWin">You Win!</h2> 
+                <h2 id="youLose">You Lose!</h2><!---brainstorm, bring up a picture of the player when guessed right-->
+                <h2 id="tryAgain">Try Again!</h2>
+                <div id="hangmanImg"></div><!---img that changes when the user guesses wrong-->
             </div>
         </div>
     </div>
@@ -48,7 +58,7 @@
         </div>
     </div>
 
-
+    <script src="assets/javascript/game.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
