updated js and readme

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <div class="container gameContent"> <!--Holds all content of both columns in a container with the class gameContent-->
         <div class="row">
-            <div id="directionsText">Press Any Key to Get Started!</div>
+            <div id="directionsText">Press Any Letter to Get Started!</div>
         </div>
         
             <div class="row">
@@ -45,7 +45,7 @@
                 </div><!--displays the active word in the wordOptions array-->
                 </div>
                 <div id="lettersGuessedContain" class="row">
-                    <div class="col pl-0"><div id="lettersGuessedTitle">Letters Guessed: <span id="lettersGuessed"></span></div>
+                    <div class="col pl-0"><div id="lettersGuessedTitle">Wrong Letters Guessed: <span id="lettersGuessed"></span></div>
                     </div>
                 </div>   
             </div>
